Off-screen menu working on desktop (need to fix mobile)

--- a/css/main.css
+++ b/css/main.css
@@ -17,6 +17,71 @@ body {
       padding-top: 70px;
   }
 
+
+/****** MENU *********/
+
+/* The side navigation menu */
+.sidenav {
+    height: 100%; /* 100% Full-height */
+    width: 0; /* 0 width - change this with JavaScript */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Stay on top */
+    top: 0;
+    right: 0;
+    background-color: #111; /* Black*/
+    overflow-x: hidden; /* Disable horizontal scroll */
+    padding-top: 60px; /* Place content 60px from the top */
+    transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
+}
+
+/* The navigation menu links */
+.sidenav a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+    transition: 0.3s
+}
+
+/* When you mouse over the navigation links, change their color */
+.sidenav a:hover, .offcanvas a:focus{
+    color: #f1f1f1;
+}
+
+/* Position and style the close button (top right corner) */
+.sidenav .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
+}
+
+/* Style page content - use this if you want to push the page content to the right when you open the side navigation */
+#main {
+    transition: margin-left .5s;
+    padding: 20px;
+}
+
+/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
+@media screen and (max-height: 480px) {
+    .sidenav {padding-top: 15px; width: 100% !important; height: 0 !important}
+    .sidenav a {font-size: 18px;}
+}
+
+
+
+/*****************/
+
+
+.menu-menu button {
+    border: none;
+    padding: 5px
+}
+
+
+
 .logo {
     padding: 10px 0px;
     max-width: 100%;
@@ -58,14 +123,24 @@ text-transform: uppercase;
     z-index: 9999;
 }
 
-.menu-item {
-    padding: 10px 0;
+.menu-container {
+    height: 40px;
+}
+
+.menu-social {
+    padding: 15px;
 }
 
 .menu-menu {
     text-align: center;
+    padding:5px;
 }
-
+.menu-menu button {
+    padding: 10px 20px;
+    background-color: #ffffff;
+    color: orange;
+    font-weight: bold;
+}
 
 .hero.jumbotron {
     position: relative;
